# FlagGenerAItor

./: Cargo.toml  README.md  test_base64.rs
ctf-assistant/: Cargo.toml
ctf-assistant/src/: cli.rs  main.rs  output.rs  web.rs
ctf-assistant/tests/: integration_test.rs
ctf-core/: Cargo.toml
ctf-core/src/: lib.rs
ctf-core/src/analysis/: decoder_pipeline.rs  file_analyzer.rs  file_cleanup.rs  file_security.rs  input_sanitization.rs  mod.rs  process_isolation.rs  steganography.rs  web_analysis.rs
ctf-core/src/core/: error_handler.rs  errors.rs  history.rs  mod.rs  models.rs  storage.rs  verbose_logger.rs
ctf-core/src/interfaces/: ai_integration.rs  context_builder.rs  mod.rs  orchestrator.rs
ctf-core/src/plugins/: builtin.rs  mod.rs  tests.rs
static/: dashboard.html  results.html
tests/: integration_tests.rs  interface_parity_tests.rs  mod.rs  performance_tests.rs  test_runner.rs
