[workspace]
members = [
    "ctf-assistant",
    "ctf-core"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }

# Analysis dependencies
infer = "0.15"
kamadak-exif = "0.5"
base64 = "0.22"
base32 = "0.4"
bs58 = "0.5"
flate2 = "1.0"
goblin = "0.8"
hex = "0.4"

# Testing dependencies
proptest = "1.0"
tempfile = "3.0"
mockall = "0.12"

# Additional common dependencies
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
regex = "1.0"
url = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
sha2 = "0.10"

# CLI formatting dependencies
colored = "2.0"
indicatif = "0.17"
atty = "0.2"

# Web server middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }