[package]
name = "ctf-assistant"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ctf-assistant"
path = "src/main.rs"

[dependencies]
ctf-core = { path = "../ctf-core" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }

# Additional dependencies for interfaces
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }